# qprov

./: .gitignore  CLAUDE.md  INTEGRATION.md  README.md  pyproject.toml
example/: claims.tex  q_real_demo.py  q_real_python.py  run_example.py
src/qprov/: __init__.py  audit_paper.py  claims.py  cli.py  external.py  gitinfo.py  hardware.py  inputs.py  properties.py  properties_qnumbers.py  query.py  serialize.py  store.py  tracking.py  verify.py
tests/: conftest.py  test_audit_paper.py  test_canonical_file.py  test_claims.py  test_cli.py  test_external.py  test_paper_tag_gate.py  test_properties.py  test_sage_integration.py  test_serialize.py  test_store.py  test_tracking.py  test_verify.py
